# trackers-gui

./: Cargo.toml  LICENSE  README.md
src/: index.html  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
